# pytorch-graph-template

./: README.md  pyproject.toml
.devcontainer/: devcontainer.json
src/: main.py
