[project]
name = "pytorch-graph-template"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "torch==2.3.0+cu121",
    "torchaudio==2.3.0+cu121",
    "torchvision==0.18.0+cu121",
    "dgl==2.4.0+cu121",
    "pydantic>=2.9.2",
    "python-dotenv>=1.0.1",
    "pydantic-settings>=2.6.1",
    "wandb>=0.18.6",
    "torch-geometric>=2.5.3",
    "torch-scatter==2.1.2+pt23cu121",
    "torch-sparse==0.6.18+pt23cu121",
    "torch-cluster==1.6.3+pt23cu121",
    "torch-spline-conv==1.2.2+pt23cu121",
    "pyg-lib==0.4.0+pt23cu121",
    "tqdm>=4.64.1",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.3.3",
    "nvitop>=1.3.2",
    "pre-commit>=3.7.0",
    "ruff>=0.3.5",
    "pytest-asyncio>=0.23.5",
    "jupyter>=1.0.0",
]

[[tool.rye.sources]]
name = "torch"
url = "https://download.pytorch.org/whl/cu121"
type = "index"

[[tool.rye.sources]]
name = "dgl"
url = "https://data.dgl.ai/wheels/torch-2.3/cu121/repo.html"
type = "find-links"

[[tool.rye.sources]]
name = "pyg-lib"
url = "https://data.pyg.org/whl/torch-2.3.0+cu121.html"
type = "find-links"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/"]
